LIBWEB-6496 Fix search facet options visibility issue
- Correct CSS rules to properly hide inactive facet options

https://umd-dit.atlassian.net/browse/LIBWEB-6496

--- a/css/base.css
+++ b/css/base.css
@@ -787,6 +787,11 @@ h6 a:focus {
   white-space: nowrap;
 }
 
+/* hide element */
+[hidden] {
+  display: none !important;
+}
+
 /* UMDDS accessibility - skip to main content link  */
 .umd-skip-content {
   clip: rect(0, 0, 0, 0);
